# purpose-driven-agent

./: Dockerfile.aos-agent  Dockerfile.purpose-driven-agent  README.md  pyproject.toml  update-base-image.yml
.github/instructions/: purpose-driven-agent.instructions.md
.github/prompts/: purpose-driven-expert.md
.github/skills/purpose-driven-agent/: SKILL.md
.github/specs/: repository.md
.github/workflows/: build-purpose-driven-agent.yml  ci.yml  deploy.yml
docs/: INDEX.md  README.md  api-reference.md  architecture.md  contributing.md
examples/: basic_usage.py
mind/: Readme.md
mind/schemas/: action-plan.schema.json  ahankara.schema.json  buddhi.schema.json  chitta.schema.json  entity-content.schema.json  entity-context.schema.json  manas.schema.json
pr/: context.md
pr/mind-schema-loader/: Readme.md  agent.py.additions.py
pr/mind-schema-loader/src/purpose_driven_agent/: mind_loader.py
pr/mind-schema-loader/tests/: test_mind_loader.py
src/aos_mcp_servers/: __init__.py  routing.py
src/purpose_driven_agent/: __init__.py  agent.py  context_provider.py  context_server.py  ml_interface.py
tests/: __init__.py  conftest.py  test_context_provider.py  test_purpose_driven_agent.py
tests/integration/: conftest.py  test_context_provider.py
tests/unit/: test_routing_and_hosting_unit.py
