[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purpose-driven-agent"
version = "1.0.0"
description = "Standalone PurposeDrivenAgent — the fundamental building block of the Agent Operating System (AOS)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "ASISaga", email = "opensource@asisaga.com" }]
keywords = ["agent", "ai", "perpetual", "purpose-driven", "lora", "mcp", "aisaga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "agent-framework>=1.0.0",
    "agent-framework-foundry>=1.0.0",
    "azure-ai-agents>=1.1.0",
    "azure-identity>=1.16.0",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.16.0",
    "azure-storage-blob>=12.19.0",
    "azure-storage-queue>=12.8.0",
    "azure-data-tables>=12.5.0",
    "azure-ai-ml>=1.14.0",
]
full = [
    "purpose-driven-agent[azure]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/purpose-driven-agent"
Documentation = "https://github.com/ASISaga/purpose-driven-agent/tree/main/docs"
Repository = "https://github.com/ASISaga/purpose-driven-agent"
Issues = "https://github.com/ASISaga/purpose-driven-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/purpose_driven_agent", "src/aos_mcp_servers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
